--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,239 @@
 <% include header %>
+<link rel="stylesheet" href="/css/frontpage.css">
+<!-- Carousel================================================== -->
+<div class="container">
+<div id="myCarousel" class="carousel slide">
+	<div class="carousel-inner">
+		<div class="item active">
+			<img src="img/paperbag_a.jpg" alt="">
+				<div class="carousel-caption">
+					<p class="lead">WELCOME</p>
+					<p><strong>to my artwork. I like jokes. And shiny things.</strong></p>               
+				</div>
+		</div>
+	</div>
+</div><!-- /.carousel -->
 
-  <h1><%-title %></h1>
-  <p>Welcome to hjkhjjh<%-title %></p>
-
+<!-- Category Icons=================================== -->
+<!--TEST TOOLTIP-->
+<div class="container-fluid" role="main">
+	<div class="row">
+	<ul class="thumbnails" id="hover-cap-4col">
+<li class="col-xs-12 col-sm-4 col-md-4 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Dataviz</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-4 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Graphics.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>User interface, user experience, iPad apps, website mockups.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-4 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/paperbag3.jpg);">
+				<div class="caption">
+					<h4>Photography</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Installations.jpg);">
+				<div class="caption">
+					<h4>Installation</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-3 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Programs.png);">
+				<div class="caption">
+					<h4>Programs</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-3 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Dataviz.png);">
+				<div class="caption">
+					<h4>Dataviz</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-3 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Programs.png);">
+				<div class="caption">
+					<h4>Programs</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-4 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/traditional.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-4 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Programs.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-4 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<!--=========little====================-->
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-12 col-sm-4 col-md-3 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Programs.png);">
+				<div class="caption">
+					<h4>Programs</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+<li class="col-xs-6 col-sm-2 col-md-2 lead">
+		<a href="projects.html#graphics">
+			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/datavizSlice.png);">
+				<div class="caption">
+					<h4>Graphics</h4>
+						<p>Illustrations, pixel art, and other designs.</p>
+				</div>
+			</div>
+		</a>
+	</ul>
+  </div>
+<!---/.category icons-->
+</div><!--/container===============-->
+</div>
+<!--div>
+	<h1><%-title %></h1>
+		<p>Welcome to hjkhjjh<%-title %></p>
+</div-->
 <% include footer %>
