--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,8 +1,518 @@
 <% include header %>
 
 
-PROJECTS AND STUFF HERE
-<h3>PROJECT</h3>
-<h3>PROJECT</h3>
-<h3>PROJECT</h3>
+<div class="container marketing">
+<!-- PAGE-HEADER-->
+	<div class="page-header">
+		<h2>Image Grid Test</h2>
+			<p>Should one happen to tickle your fancy, you may click on it to explore in more detail.</p>
+			<!-- BREADCRUMB -->
+			<ul class="breadcrumb">
+				<li><a href="#">Home</a> <span class="divider">&rarr;</span></li>
+				<li class="active">Projects</li>
+			</ul>
+			<!--END: BREADCRUMB -->
+	</div>
+<!-- PAGE-HEADER-->
+</div>
+	  
+	  	<!--###################-->
+		<!-- START PORTFOLIO -->
+		<!--###################-->
+		
+	  <!-- CONTENT CONTAINER-->
+		<div class="container">
+			
+				<!-- FILTER-->
+			<!-- just add your TAG to data-filter="ADD HERE" -->	
+			<!-- and then add your same TAG to portfolio item class="ADD HERE" -->
+			<div class="color-bottom-line center">
+				<div class="well text-center">
+					<div class="proj">
+						<div id="filters">
+						<a href="#" data-filter="*" class="ione-col active btn btn-danger">Show All</a>
+						<a href="#ux" data-filter=".ux" class="btn ione-col btn-danger">UX&amp;UI</a>
+						<a href="#dataviz" data-filter=".dataviz" class="btn ione-col btn-danger">Data Viz</a>
+						<a href="#design" data-filter=".design" class="btn ione-col btn-danger">Design</a>
+						<a href="#traditional" data-filter=".traditional" class="btn ione-col btn-danger">Traditional</a>
+						<a href="#photography" data-filter=".photography" class="btn ione-col btn-danger">Photography</a>
+						<a href="#installation" data-filter=".installation" class="btn ione-col btn-danger">Installation</a>
+						</div>
+					</div>
+				</div>
+			</div>
+							
+		<!--END: FILTER-->
+		
+
+<div class="container">
+      
+<!--###################-->
+<!-- START PORTFOLIO ITEMS CONTAINER -->
+<!--###################-->
+<div id="container-folio" class="row">
+			
+<!-- portfolio item -->
+<div class="col-sm-3  project-item installation box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href = "#">
+        <img src="img/Puppets/Bee.png" alt="">
+	</a>
+	<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Pop Sucketts</h4>
+			<p class="">A psychedelic, adult-themed, sock puppet show.</p>
+			<!-- <p>
+			<a class="btn btn-primary btn-block" href="#">
+			<i class="fa-icon-link fa-icon-large"></i> Read more
+			</a>
+			</p> -->
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="img/GraphicDesign/bus_stop_time_lapse/thumbnail/bus_stop.png" " alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Bus Stop</h4>
+			<p class="">An illustrated time lapse.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href= "Pope_new.html">
+        <img src="../img/unTraditional/thumbnail/pope3.jpg" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Condom Pope</h4>
+			<p class="">The Pope made out of condoms.<br></p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item dataviz box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="img/DataViz/thumbnail/4.png" " alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">One Million Images</h4>
+			<p class="">User uploads from Deviantart.com<br></p>
+			<p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item traditional design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="img/unTraditional/thumbnail/2.png" " alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Pen & Ink</h4>
+			<p class="">A cognitive process.</p>
+			<p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item installation box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Consent</h4>
+			<p class="">A Facebook app that will make you question hitting the "allow" button.</p>
+			<p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item photography box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Stop Motion</h4>
+			<p class="">Film from stills.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item design ux box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="img/NEW_RESIZED/ar_app/EfficiencySuggestionsDIFF.png" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Greenroom</h4>
+			<p class="">AR app that shows you how 'green' your home is.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item ux box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Energy Dashboard</h4>
+			<p class="">Contextual redesign of UCSD's energy use by building.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item photography ux box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">LA bummer</h4>
+			<p class="">Making the homeless famous.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="img/Branding/Logo_Oscillate2.gif" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Branding</h4>
+			<p class="">Company identity.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item traditional box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Collage Journal</h4>
+			<p class="">A journal of mixed-media collage.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">TAILS Book</h4>
+			<p class="">Touching stories of rescued animals.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item photography box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Paperbag Porn</h4>
+			<p class="">A clean version.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="img/Branding/Logo_Oscillate2.gif" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Branding</h4>
+			<p class="">Company identity.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item dataviz box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Van Gough</h4>
+			<p class="">********.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item dataviz box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Inter-coder Reliability</h4>
+			<p class="">flow chart for coding dialogue from videos.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item ux box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Dysfunctional Software</h4>
+			<p class="">A commentary on synonyms and the English language.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<div class="col-sm-3  project-item design box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Kitchen Rescues</h4>
+			<p class="">A cookbook for people and their pets.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item photography box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Streets</h4>
+			<p class="">Emotive portraits.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+
+<!-- portfolio item -->
+<div class="col-sm-3  project-item photography box">
+	<div class="thumbnail">
+        <!-- IMAGE CONTAINER-->
+	<a href="#">
+        <img src="http://lorempixel.com/260/195/technics/1" alt="">
+	</a>
+		<!--END IMAGE CONTAINER-->
+		<!-- CAPTION -->
+		<div class="caption">
+		<h4 class="">Headshots</h4>
+			<p class="">For their portfolios.</p>
+		</div> 
+		<!--END CAPTION -->
+	</div>
+<!-- END: THUMBNAIL -->
+</div>
+<!-- portfolio item -->
+
+</div>
+<!--/ROW-->
+<!--###################-->
+<!-- END PORTFOLIO -->
+<!--###################-->
+
+</div><!-- /.container -->
+</div>
+<script type="text/javascript" src="/js/jQuery_filterable_portfolio/source/scripts/jquery.js"></script>
+<script type="text/javascript" src="/js/jquery.js"></script>
+<!-- Isotope init script -->
+<script type="text/javascript" src="/js/jquery.waitforimages.js"></script> 
+<script type="text/javascript" src="/js/jquery.isotope.min.js"></script>
+<script>
+		jQuery.noConflict()(function($){
+			var $container = $('#container-folio');
+					
+			if($container.length) {
+				$container.waitForImages(function() {
+					
+					// initialize isotope
+					$container.isotope({
+					  itemSelector : '.box',
+					  layoutMode : 'fitRows'
+					});
+					
+					// filter items when filter link is clicked
+					$('#filters a').click(function(){
+					  var selector = $(this).attr('data-filter');
+					  $container.isotope({ filter: selector });
+					  $(this).removeClass('active')
+						.addClass('active')
+						.siblings()
+						.removeClass('active all');
+					  
+					  return false;
+					});
+					
+				},null,true);
+			}});
+     //this line output selected in console
+			// $(this).attr('installation'); $(this).removeClass('active').addClass('active');
+</script>
+
+
+<!-- / Isotope init script -->
+
 <% include footer %>
