compiled with grunt and added jQuery library

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,10 +8,38 @@
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/bootstrap-theme.css">
   <link rel="stylesheet" href="/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/screen.css">
-  <link rel="stylesheet" href="/css/screen-ie6.css">
-
+	<link rel="stylesheet" href="/js/jQuery_filterable_portfolio/source/stylesheets/screen-ie6.css">
+	<link rel="stylesheet" href="/js/jQuery_filterable_portfolio/source/stylesheets/screen.css">
+	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://localhost:35729/livereload.js"></script>
+
+	<!-- Isotope init script -->
+<script type="text/javascript" src="/js/jquery.waitforimages.js"></script> 
+<script type="text/javascript" src="/js/jquery.isotope.min.js"></script>
+<!-- / Isotope init script -->
+	<script type="text/javascript" src="/js/html5shiv.js"></script> 
+	<script src="http://platform.twitter.com/widgets.js"></script>
+	<script src="/js/google-code-prettify/prettify.js"></script>
+	<script src="/js/holder.js"></script>
+	<script src="/js/application.js"></script>
+	<script type="text/javascript" src="/js/modernizr.custom.js"></script>
+	<script src="/js/toucheffects.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/bootstrap-transition.js"></script>
+	<script src="/js/bootstrap-alert.js"></script>
+	<script src="/js/bootstrap-modal.js"></script>
+	<script src="/js/bootstrap-dropdown.js"></script>
+	<script src="/js/bootstrap-scrollspy.js"></script>
+	<script src="/js/bootstrap-tab.js"></script>
+	<script src="/js/bootstrap-tooltip.js"></script>
+	<script src="/js/bootstrap-popover.js"></script>
+	<script src="/js/bootstrap-button.js"></script>
+	<script src="/js/bootstrap-collapse.js"></script>
+	<script src="/js/bootstrap-carousel.js"></script>
+	<script src="/js/bootstrap-typeahead.js"></script>
+	<script src="/js/bootstrap-affix.js"></script>
+
 </head>
 <body>
 	<div class="container">
@@ -36,6 +64,5 @@
 		 </div>
 	 </nav>
 	</div>
-
 
 
