--- a/views/index.ejs
+++ b/views/index.ejs
@@ -232,6 +232,19 @@
 <!---/.category icons-->
 </div><!--/container===============-->
 </div>
+	<script>
+	$(document).ready(function(){
+		$("[rel='tooltip']").tooltip();    
+		$('#hover-cap-4col .img-circle').hover(
+			function(){
+				$(this).find('.caption').slideDown(250);
+			},
+			function(){
+				$(this).find('.caption').slideUp(250);
+			}
+		);    
+	});           
+  </script>
 <!--div>
 	<h1><%-title %></h1>
 		<p>Welcome to hjkhjjh<%-title %></p>
