--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,8 @@
 		</a>
 <li class="col-xs-4 col-sm-pull-0 col-md-pull-0 lead">
 		<a href="/projects/installations">
-			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Installation.png);">
+			<div  class="ratio img-responsive img-circle" style="background-image:
+      url(../img/cat_icons/installation.png);">
 				<div class="caption">
 					<h4>Installation</h4>
 						<p>Art installed</br>& performed.</p>
@@ -71,7 +72,8 @@
 		</a>
 <li class="col-xs-3 col-sm-push-0 lead">
 		<a href="/projects/traditional">
-			<div  class="ratio img-responsive img-circle" style="background-image: url(../img/cat_icons/Traditional.png);">
+			<div  class="ratio img-responsive img-circle" style="background-image:
+      url(../img/cat_icons/traditional.png);">
 				<div class="caption">
 					<h4>Traditional</h4>
 						<p>Paintings, collages, etc.</p>
