--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <% include header %>
+<a href="<%= url('index.html') %>">Home Page</a>
 <link rel="stylesheet" href="/css/frontpage.css">
 <!-- Carousel================================================== -->
 <div class="container">
